tests/errors/surf_type_10.ki
# type/operator: a Float does not support 'in'
discard 1 in 3.14
